styles/mobile.css
@media only screen and (hover: none) and (pointer: coarse) {
    * { /* Disable animations */
        -webkit-animation: none !important;
        -moz-animation: none !important;
        -o-animation: none !important;
        -ms-animation: none !important;
        animation:  none !important;
    }

    .snow {
        visibility: hidden;
        filter: none;
        animation: none;
    }

    .navbar {
        animation: none;
        transform: none;
    }

    .nav-buttons {
        width: 65%;
    }

    .nav-item a ion-icon {
        zoom: 0.5;
    }

    .links {
        width: 35%;
    }

    .link-item a ion-icon {
        zoom: 0.7;
    }
}

@media (max-width: 1000px) {
    body {
        display: block;
        width: 100%;
    }

    .content {
        margin: 60px 12px 0 0;
        scroll-margin-top: 60px;
        scroll-margin-left: 0;
        width: calc(100% - 24px);
        top: 0;
        -webkit-transform: translate(-50%, 0);
        transform: translate(-50%, 0);
    }

    #portfolio {
        height: calc(100% - 60px);
        top: 0;
        -webkit-transform: translate(-50%, 0);
        transform: translate(-50%, 0);
    }

    .navbar {
        height: 60px;
        width: 100%;
        margin-right: 0;
        margin-bottom: 32px;
        display: inline-flex;
        flex-direction: row;
    }

    .nav-placeholder {
        width: 0;
        height: 0;
    }

    .nav-buttons {
        width: 85%;
        height: 100%;
        text-align: center;
        margin: 0;
        padding: 0 0 0 16px;
    }

    .nav-item, .active-item {
        float: left;
        height: 100%;
        margin-right: 16px;
    }

    .nav-item a, .active-item a {
        height: 100%;
    }

    .nav-item a ion-icon, .active-item a ion-icon {
        padding-top: 30px;
    }

    .nav-item a span, .active-item a span {
        vertical-align: middle;
        padding-top: 5px;
    }

    .links {
        width: 15%;
        height: 100%;
        display: inline-flex;
    }

    .link-item {
        height: 100%;
    }

    .link-item a {
        height: 100%;
        padding: 0 6px;
        line-height: normal;
        display: inline-block;
    }

    .link-item a ion-icon {
        height: 100%;
    }

    .contact, .about, .skills, .group {
        margin-left: 0;
        width: 100%;
    }

    .contact {
        height: 100%;
    }

    .contact .text-zone {
        margin-left: 48px;
        width: calc(100% - 56px);
        margin-right: 0;
    }

    .about .text-zone, .skills .text-zone, .portfolio {
        width: calc(100% - 48px);
    }

    .portfolio {
        margin-left: 0;
        width: 100%;
    }

    .carousel-slide {
        display: flex;
        flex-direction: column-reverse;
        overflow: auto;
        width: calc(100% - 24px);
        margin: 0;
    }

    .carousel-content {
        width: calc(100% - 48px);
        height: auto;
        margin-left: 48px;
    }

    .carousel-content h2 {
        margin-left: 0;
        width: 100%;
    }

    .carousel-content p {
        margin-left: 0;
        width: 100%;
        font-size: 12px;
    }

    .main-gallery {
        margin-left: 0;
        margin-right: 0;
        width: 100%;
    }

    .image {
        margin: 0 0 0 48px;
        width: calc(100% - 48px)
    }

    .image img {
        position: relative;
        margin: 0;
    }

    #captcha-row {
        display: flex;
        flex-direction: column;
        margin-top: 8px;
        margin-bottom: 0;
        padding: 0;
    }

    #captcha-container {
        width: 100%;
        padding-bottom: 8px;
    }

    #form-submit {
        width: 100%;
        -webkit-transform: none;
        transform: none;
    }
}

